--- a/Dockerfile.armhf
+++ b/Dockerfile.armhf
@@ -1,5 +1,5 @@
 FROM lsiobase/alpine:arm32v7-3.9
-MAINTAINER sparklyballs
+MAINTAINER chbmb
 
 # set version label
 ARG BUILD_DATE
@@ -25,8 +25,8 @@ RUN \
 	py2-pip && \
 # install nntp2nntp via pip package manager
  if [ -z ${NNTP2NNTP_RELEASE+x} ]; then \
-	NNTP2NNTP_RELEASE=$(curl -sX GET https://api.github.com/repos/linuxserver/nntp2nntp/commits/master \
-	| awk '/sha/{print $4;exit}' FS='[""]'); \
+	NNTP2NNTP_RELEASE=$(curl -sX GET "https://api.github.com/repos/linuxserver/nntp2nntp/releases/latest" \
+| awk '/tag_name/{print $4;exit}' FS='[""]'); \
  fi && \
  pip install --no-cache-dir -U \
 	https://github.com/linuxserver/nntp2nntp/archive/${NNTP2NNTP_RELEASE}.tar.gz \
