--- a/readme-vars.yml
+++ b/readme-vars.yml
@@ -49,6 +49,7 @@ app_setup_block: |
   ```
 # changelog
 changelogs:
+  - { date: "10.10.22:", desc: "Rebase to Alpine 3.15." }
   - { date: "19.12.19:", desc: "Rebasing to alpine 3.11." }
   - { date: "28.06.19:", desc: "Rebasing to alpine 3.10." }
   - { date: "23.04.19:", desc: "Multiarch builds and build from Github fork." }
