--- a/Dockerfile.armhf
+++ b/Dockerfile.armhf
@@ -25,6 +25,9 @@ RUN \
     libffi \
     libressl \
     python2 && \
+  # install pip
+  curl -o /tmp/get-pip.py https://bootstrap.pypa.io/pip/2.7/get-pip.py && \
+  python /tmp/get-pip.py && \ 
   # install nntp2nntp via pip package manager
   if [ -z ${NNTP2NNTP_RELEASE+x} ]; then \
     NNTP2NNTP_RELEASE=$(curl -sX GET "https://api.github.com/repos/linuxserver/nntp2nntp/releases/latest" \
