--- a/Dockerfile.aarch64
+++ b/Dockerfile.aarch64
@@ -10,16 +10,12 @@ LABEL maintainer="chbmb"
 # install build packages
 RUN \
   apk add --no-cache --virtual=build-dependencies \
+    build-base \
     cargo \
-    g++ \
-    gcc \
     libffi-dev \
     libressl-dev \
-    make \
-    musl-dev \
     openssl-dev \
-    python2-dev \
-    tar && \
+    python2-dev && \
   # install runtime packages
   apk add --no-cache \
     libffi \
@@ -33,6 +29,8 @@ RUN \
     NNTP2NNTP_RELEASE=$(curl -sX GET "https://api.github.com/repos/linuxserver/nntp2nntp/releases/latest" \
   | awk '/tag_name/{print $4;exit}' FS='[""]'); \
   fi && \
+  pip install --no-cache-dir -U --find-links https://wheel-index.linuxserver.io/alpine-3.15/ \
+    typing && \
   pip install --no-cache-dir -U \
     https://github.com/linuxserver/nntp2nntp/archive/${NNTP2NNTP_RELEASE}.tar.gz \
     service_identity && \
@@ -40,7 +38,7 @@ RUN \
   apk del --purge \
     build-dependencies && \
   rm -rf \
-    /root/.cache \
+    $HOME/.cache \
     /tmp/*
 
 # add local files
